[CrOS MultiDevice] Metrics for SL AuthResult Sign-In Success added.

Success case was excluded in original CL:
https://chromium-review.googlesource.com/c/chromium/src/+/1352485.

Bug: 919674
Change-Id: I9e5dbc6d3115601252154592dd141426ff486d1a
Reviewed-on: https://chromium-review.googlesource.com/c/1399466
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Commit-Queue: Regan Hsu <hsuregan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621712}
Former-commit-id: f715b679954a75ba2702c9297150f5ff409958fe